Removing dependencies 3/n (#29)
* Remove guava dependencies from dexlib2/base/value files.

* Removing usages of guava libraries in dexlib2/dexbacked

* Changing byte reading InputStream operations to use InputStreamUtil.
Fixing indentation to be consistently 4 spaces.

* Changing byte reading InputStream operations to use InputStreamUtil.
Fixing indentation to be consistently 4 spaces.

* Changing byte reading InputStream operations to use InputStreamUtil.
Fixing indentation to be consistently 4 spaces.

* Fixing indentation in newly added utils classes.

* Adding missing licensing

* Update ZipDexContainer.java after merging pr 30

---------

Co-authored-by: Søren Gjesse <sgjesse@google.com>